estructura html básica revisada

--- a/src/index.html
+++ b/src/index.html
@@ -9,71 +9,58 @@
 
   <body>
     <div class="container">
+      <!-- -------------------------------------- row boards -->
+      <!-- -------------------------------------- board -->
       <div class="row">
-        <div class="four columns taskHolder">
+        <div class="four columns board">
+          <!-- -------------------------------------- board title -->
           <div class="row">
-            <div class="twelve columns task">
-              <p>cositas para hacer</p>
-              <div class="row">
-                <div class="seven columns"></div>
-                <div class="five columns">
-                  <button class="bttnSubLabel">add label</button>
-                  <button class="bttnSubLabel">add checklist</button>
-                </div>
-              </div>
+            <div class="twelve columns">
+             <p>title</p>
             </div>
           </div>
+          <!-- -------------------------------------- board title -->
+          <!-- -------------------------------------- taskHolder -->
           <div class="row">
-            <div class="twelve columns task">
-              <p>cositas para hacer</p>
+            row boards
+            <div class="twelve columns">
+              <!-- -------------------------------------- task -->
               <div class="row">
-                <div class="seven columns"></div>
-                <div class="five columns">
-                  <button class="bttnSubLabel">add label</button>
-                  <button class="bttnSubLabel">add checklist</button>
+                <div class="twelve columns task">
+                  <div class="twelve columns">
+                    <!-- tags -->
+                  </div>
+                  <div class="twelve columns task">
+                    <p>cositas para hacer</p>
+                  </div>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="row">
-            <button class="bttnAddTask">add task</button>
-          </div>
-        </div>
-        <div class="four columns taskHolder">
-          <div class="row">
-            <div class="twelve columns task">
-              <p>cositas para hacer</p>
+              <!-- -------------------------------------- task -->
               <div class="row">
-                <div class="seven columns"></div>
-                <div class="five columns">
-                  <button class="bttnSubLabel">add label</button>
-                  <button class="bttnSubLabel">add checklist</button>
+                <div class="twelve columns task">
+                  <div class="twelve columns">
+                    <!-- tags -->
+                  </div>
+                  <div class="twelve columns task">
+                    <p>cositas para hacer</p>
+                  </div>
                 </div>
               </div>
+              <!-- -------------------------------------- task -->
             </div>
           </div>
+          <!-- -------------------------------------- task holder -->
+          <!-- -------------------------------------- add task -->
           <div class="row">
-            <button class="bttnAddTask">add task</button>
-          </div>
-        </div>
-        <div class="four columns taskHolder">
-          <div class="row">
-            <div class="twelve columns task">
-              <p>cositas para hacer</p>
-              <div class="row">
-                <div class="seven columns"></div>
-                <div class="five columns">
-                  <button class="bttnSubLabel">add label</button>
-                  <button class="bttnSubLabel">add checklist</button>
-                </div>
-              </div>
+            <div class="addTask">
+              <p class="addTaskP">add task</p>
+              <button class="addTaskB">add</button>
             </div>
           </div>
-          <div class="row">
-            <button class="bttnAddTask">add task</button>
-          </div>
+          <!-- -------------------------------------- add task -->
         </div>
       </div>
+      <!-- -------------------------------------- board -->
     </div>
   </body>
 </html>
