--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
           <div class="row">
             <div class="twelve columns addLabel">
               
-                <div>
+                <div class="labelInput">
                   <input type="text" id="labelInput">
                   <button class="addLabelButton" id="addLabelButton">add label</button>
                 </div>
@@ -87,11 +87,22 @@
                   <button class="colorButton" style="background-color: #a72525"></button>
                   <button class="colorButton" style="background-color: #781065"></button>
                 </div>
-                <div class="modalExitButton">
-                  <button class="exitButton">Exit</button>
-                </div>
               </div>
             </div>
+          </div>
+          <div class="row">
+            <div class="twelve columns checkList">
+              <div class="checkListList">
+              </div>
+              <div class="checkListInput">
+                <input type="text" id="checkListInput">
+                <button class="addcheckListButton" id="addCheckListButton">add checklist</button>
+              </div>
+            </div>
+            </div>
+          </div>
+          <div class="modalExitButton">
+            <button class="exitButton">Exit</button>
           </div>
         </div>
       </div>
@@ -100,24 +111,3 @@
   </body>
 </html>
 
-<div class="row">
-  <div class="twelve columns labelList">
-
-  </div>
-</div>
-<div class="row">
-  <div class="twelve columns addLabel">
-    <div class="row">
-      <div class="nine columns"></div>
-      <div class="three columns"></div>
-    <div class="row">
-        <div class="twelve columns">
-          <button class="colorSpan" style="background-color: #65ad37"></button>
-          <button class="colorSpan" style="background-color: #c2ba1f"></button>
-          <button class="colorSpan" style="background-color: #a72525"></button>
-          <button class="colorSpan" style="background-color: #781065"></button>
-        </div>
-      </row>
-    </div>
-  </div>
-</div>
